--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                         i have maintained a 4.0GPA while taking 14AP tests and earning the IB diplmoma (42/45) in high school. 
                         i plan to continue challenging myself in college and beyond by seeking opportunities to learn new knowledge
                         while advancing my abilities. 
-                        my studies currently focus on computer science, [electrical engineering], and [smth else]. to the right are highlights of my skills:</p>
+                        my studies currently focus on computer science (python), information systems, and electromagnetism. here are the highlights of my skills:</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>math</span>
+                            <span>mathematics</span>
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
@@ -176,7 +176,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>adobe</span>
+                            <span>sql</span>
                             <span>50%</span>
                         </div>
                         <div class="line php"></div>
